fix tree-view overflow

--- a/src/components/ProTree/index.scss
+++ b/src/components/ProTree/index.scss
@@ -1,6 +1,6 @@
 .filter {
   box-sizing: border-box;
-  width: 260px;
+  width: 280px;
   height: 100%;
   padding: 18px;
   margin-right: 10px;
